clusters/apps/default/client/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  namespace: default
  labels:
    app: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-pod
  template:
    metadata:
      labels:
        app: client-pod
    spec:
      containers:
        - image: ghcr.io/crisszkutnik/client:0.0.2
          imagePullPolicy: IfNotPresent
          name: client-container
          resources:
            requests:
              memory: "64Mi"
              cpu: 0.1
            limits:
              memory: "512Mi"
              cpu: 0.5
          ports:
            - containerPort: 80
