clusters/apps/default/client/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: default
  labels:
    app: client
spec:
  selector:
    app: client-pod
  ports:
    - name: http
      port: 80
      targetPort: 80
